force-app/main/default/objects/customObj__c.object
<CustomObject>
    <fields>
        <fullName>requiredDate__c</fullName>
        <label>requiredDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>requiredDatetime__c</fullName>
        <label>requiredDatetime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>requiredStr__c</fullName>
        <label>requiredStr</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>customObj</label>
    <nameField>
        <label>customObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>customObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>